@@ -1,0 +1,2 @@
+debian/tmp/usr/bin/1sec     usr/bin
+debian/tmp/usr/bin/concat   usr/bin
