@@ -1,0 +1,72 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
+"file:///usr/share/xml/docbook/schema/dtd/4.2/docbookx.dtd" [
+
+  <!ENTITY dhfirstname "<firstname>Frank S.</firstname>">
+  <!ENTITY dhsurname   "<surname>Thomas</surname>">
+  <!ENTITY dhusername  "Frank S. Thomas">  
+  <!ENTITY dhemail     "<email>frank@thomas-alfeld.de</email>">
+  <!ENTITY dhpackage   "boinc_cmd">
+  <!ENTITY dhdate      "<date>April 04, 2005</date>">
+  
+  <!ENTITY debian      "<productname>Debian</productname>">
+  <!ENTITY gnu         "<acronym>GNU</acronym>">
+  <!ENTITY gpl         "&gnu; <acronym>GPL</acronym>">
+]>
+
+<!-- 
+ This is the manual page for boinc_cmd.
+  
+ This file is licensed under the terms of the GNU General Public License,
+ Version 2 or any later version published by the Free Software Foundation.
+
+ Copyright 2005 Frank S. Thomas <frank@thomas-alfeld.de>
+-->
+
+<refentry>
+  <refentryinfo>
+    <address>
+      &dhemail;
+    </address>
+    <author>
+      &dhfirstname;
+      &dhsurname;
+    </author>
+    <copyright>
+      <year>2005</year>
+      <holder>&dhusername;</holder>
+    </copyright>
+    &dhdate;
+  </refentryinfo>
+
+  <refmeta>
+    <refentrytitle>boincmgr</refentrytitle>
+    <manvolnum>1</manvolnum>
+  </refmeta>
+  
+  <refnamediv>
+    <refname>&dhpackage;</refname> 
+    <refpurpose>The graphical BOINC manager for the core client.</refpurpose>
+  </refnamediv>
+
+  <refsynopsisdiv>
+    <cmdsynopsis>
+      <command>boincmgr</command>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+  
+  <refsect1>
+    <title>DESCRIPTION</title>
+    <para>The BOINC manager (<command>&dhpackage;</command>) is a controling
+      and monitoring utility for the BOINC core client.</para>
+  </refsect1>
+  
+  <refsect1>
+    <title>AUTHOR</title>
+    <para>This manual page was written by &dhusername; &dhemail; for the
+      &debian; project (but may be used by others). Permission is granted to
+      copy, distribute and/or modify this document under the terms of the &gnu;
+      General Public License, Version 2 or any later version published by the
+      Free Software Foundation.</para>
+  </refsect1>
+</refentry>
