@@ -2,6 +2,9 @@ boinc (4.70-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * boinc_cmd now in boinc-client
+  * debian/control.in:
+    - Added libwxgtk2.6-dev to Build-Depends and enabled the boinc-manager
+      package again. 
 
  -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  7 Jul 2005 18:45:03 +0200
 
